# namegen-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  generator.dtd  lib.rs  mchain.rs
libnamegen/: Cargo.toml
libnamegen/src/: lib.rs  mchain.rs  rule.rs  xmlparse.rs
namegen/: Cargo.toml
namegen/src/: main.rs
src/: main.rs
