[package]
name = "libnamegen"
version = "0.1.0"
authors = ["Matt Kingsley <m.p.kingsley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markov = "^1.1"
roxmltree = "^0.14.0"
oorandom = "^11"

[lib]
crate-type=["rlib","cdylib", "staticlib" ]