[package]
name = "namegen"
version = "0.1.0"
authors = ["mkingsley"]
edition = "2018"
license = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markov = "1.1"
roxmltree = "0.14.0"
random-pick = "^1.2"
oorandom = "^11"
clap = "2.33"
libnamegen = { path = "../libnamegen"}

[target]
